src/components/MoviesCard/MoviesCard.css
.card {
  box-sizing: border-box;
  list-style: none;
  display: inline-block;
  position: relative;
}

.card:hover {
  cursor: pointer;
}

.card__link {
  margin: 0;
  padding: 0;
  text-decoration: none;
  color: inherit;
}

.card__img-container {
  width: 360px;
  height: 201px;
  border-radius: 6px;
}

.card__img {
  width: 100%;
  height: 100%;
  /* width: 360px;
  height: 201px;
  border-radius: 6px; */
  margin: 0;
  padding: 0;
}

.card__caption {
  display: flex;
  justify-content: space-between;
  align-content: center;
  padding: 14px;
}

.card__title {
  margin: 0;
  padding: 0;
  max-width: 272px;
  font-weight: 500;
  font-size: 13px;
  line-height: 16px;
}

.card__info {
  background-color: #f9f9f9;
  border-radius: 3px;
  padding: 3px 4px;
  margin: 0;
  color: #a0a0a0;
  font-weight: normal;
  font-size: 11px;
  line-height: 10px;
  max-height: 18px;
}

.card__save-button {
  position: absolute;
  top: 14px;
  left: 274px;
  border-radius: 30px;
  background-color: #f9f9f9;
  border: none;
  width: 72px;
  height: 21px;
  color: black;
  font-weight: normal;
  font-size: 10px;
  line-height: 9px;
  align-content: center;
  transition: opacity 0.3s linear;
  display: none;
}

.card:hover .card__save-button {
  display: block;
}

.card__save-button_disabled {
  display: none;
}

.card__save-button:hover {
  cursor: pointer;
  opacity: 0.6;
}

.card__save-button_saved {
  background-image: url(../../images/saved-icon.svg);
  width: 21px;
  height: 21px;
  position: absolute;
  top: 14px;
  left: 325px;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  border: none;
  background-color: transparent;
  border-radius: 50%;
  padding: 0;
  margin: 0;
  transition: opacity 0.3s linear;
}

.card__save-button_saved:hover {
  cursor: pointer;
  opacity: 0.7;
}

.card__delete-button {
  background-image: url(../../images/delete-btn.svg);
  width: 21px;
  height: 21px;
  position: absolute;
  top: 14px;
  left: 325px;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  border: none;
  background-color: transparent;
  border-radius: 50%;
  padding: 0;
  margin: 0;
  transition: transform opacity 0.3s linear;
}

.card__delete-button:hover {
  cursor: pointer;
  opacity: 0.7;
  transform: rotate(-75deg);
}

@media screen and (max-width: 1004px) {
  .card__img-container {
    width: 339px;
    height: 190px;
  }

  .card__title {
    max-width: 251px;
  }

  /* .card__img {
    width: 339px;
    height: 190px;
  } */

  .card__caption {
    padding: 25px 0 0;
  }
  .card__save-button {
    left: 253px;
  }
  .card__save-button_saved {
    left: 304px;
  }
  .card__delete-button {
    left: 304px;
  }
}

@media screen and (max-width: 640px) {
  .card {
    width: 300px;
  }

  .card__img-container {
    width: 300px;
    height: 168px;
  }

  /* .card__img {
    width: 300px;
    height: 168px;
  } */

  .card__title {
    max-width: 212px;
  }

  .card__caption {
    padding-top: 16px;
  }
  .card__title {
    font-size: 12px;
    line-height: 15px;
  }
  .card__save-button {
    left: 218px;
  }

  .card__save-button_saved {
    top: 10px;
    left: 269px;
  }

  .card__delete-button {
    top: 10px;
    left: 269px;
  }
}

